--- a/CensusInfo.ipynb
+++ b/CensusInfo.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'us'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-9b4651c40c18>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcensus\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCensus\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mus\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mstates\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mg_key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'us'"
+     ]
+    }
+   ],
    "source": [
     "# Dependencies\n",
     "import numpy as np\n",
@@ -24,202 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Household Income</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Median Age</th>\n",
-       "      <th>Median Male Age</th>\n",
-       "      <th>Median Female Age</th>\n",
-       "      <th>Per Capita Income</th>\n",
-       "      <th>Zipcode</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ZCTA5 00601</td>\n",
-       "      <td>13092.0</td>\n",
-       "      <td>17242.0</td>\n",
-       "      <td>40.5</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>41.3</td>\n",
-       "      <td>6999.0</td>\n",
-       "      <td>00601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ZCTA5 00602</td>\n",
-       "      <td>16358.0</td>\n",
-       "      <td>38442.0</td>\n",
-       "      <td>42.3</td>\n",
-       "      <td>41.9</td>\n",
-       "      <td>42.8</td>\n",
-       "      <td>9277.0</td>\n",
-       "      <td>00602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ZCTA5 00603</td>\n",
-       "      <td>16603.0</td>\n",
-       "      <td>48814.0</td>\n",
-       "      <td>41.1</td>\n",
-       "      <td>39.1</td>\n",
-       "      <td>42.9</td>\n",
-       "      <td>11307.0</td>\n",
-       "      <td>00603</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ZCTA5 00606</td>\n",
-       "      <td>12832.0</td>\n",
-       "      <td>6437.0</td>\n",
-       "      <td>43.3</td>\n",
-       "      <td>43.2</td>\n",
-       "      <td>43.4</td>\n",
-       "      <td>5943.0</td>\n",
-       "      <td>00606</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ZCTA5 00610</td>\n",
-       "      <td>19309.0</td>\n",
-       "      <td>27073.0</td>\n",
-       "      <td>42.1</td>\n",
-       "      <td>40.4</td>\n",
-       "      <td>44.2</td>\n",
-       "      <td>10220.0</td>\n",
-       "      <td>00610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33115</th>\n",
-       "      <td>ZCTA5 87515</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>363.0</td>\n",
-       "      <td>44.2</td>\n",
-       "      <td>47.8</td>\n",
-       "      <td>22.9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87515</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33116</th>\n",
-       "      <td>ZCTA5 87518</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-666666666.0</td>\n",
-       "      <td>-666666666.0</td>\n",
-       "      <td>-666666666.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87518</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33117</th>\n",
-       "      <td>ZCTA5 87511</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2896.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>44.3</td>\n",
-       "      <td>27.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33118</th>\n",
-       "      <td>ZCTA5 87578</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>245.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>39.6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87578</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33119</th>\n",
-       "      <td>ZCTA5 87532</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>18756.0</td>\n",
-       "      <td>39.3</td>\n",
-       "      <td>37.6</td>\n",
-       "      <td>40.6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87532</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>33120 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Name  Household Income  Population   Median Age  \\\n",
-       "0      ZCTA5 00601           13092.0     17242.0         40.5   \n",
-       "1      ZCTA5 00602           16358.0     38442.0         42.3   \n",
-       "2      ZCTA5 00603           16603.0     48814.0         41.1   \n",
-       "3      ZCTA5 00606           12832.0      6437.0         43.3   \n",
-       "4      ZCTA5 00610           19309.0     27073.0         42.1   \n",
-       "...            ...               ...         ...          ...   \n",
-       "33115  ZCTA5 87515               NaN       363.0         44.2   \n",
-       "33116  ZCTA5 87518               NaN         9.0 -666666666.0   \n",
-       "33117  ZCTA5 87511               NaN      2896.0         36.0   \n",
-       "33118  ZCTA5 87578               NaN       245.0         48.0   \n",
-       "33119  ZCTA5 87532               NaN     18756.0         39.3   \n",
-       "\n",
-       "       Median Male Age  Median Female Age  Per Capita Income Zipcode  \n",
-       "0                 39.5               41.3             6999.0   00601  \n",
-       "1                 41.9               42.8             9277.0   00602  \n",
-       "2                 39.1               42.9            11307.0   00603  \n",
-       "3                 43.2               43.4             5943.0   00606  \n",
-       "4                 40.4               44.2            10220.0   00610  \n",
-       "...                ...                ...                ...     ...  \n",
-       "33115             47.8               22.9                NaN   87515  \n",
-       "33116     -666666666.0       -666666666.0                NaN   87518  \n",
-       "33117             44.3               27.8                NaN   87511  \n",
-       "33118             63.0               39.6                NaN   87578  \n",
-       "33119             37.6               40.6                NaN   87532  \n",
-       "\n",
-       "[33120 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'c' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-b079279399ac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# See: https://github.com/CommerceDataService/census-wrapper for library documentation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# See: https://gist.github.com/afhaque/60558290d6efd892351c4b64e5c01e9b for labels\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\", \"B01002_002E\",\n\u001b[0m\u001b[0;32m      5\u001b[0m                           \"B01002_003E\",\"B19301_001E\"),\n\u001b[0;32m      6\u001b[0m                            {'for': 'zip code tabulation area:*'})\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'c' is not defined"
+     ]
     }
    ],
    "source": [
@@ -254,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
