--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-b03351981ce5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mrequest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"https://mcuapi.herokuapp.com/api/v1/movies\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mrequest_text\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrequest_text\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;31m#print(data)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"data\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"title\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Specify the URL\n",
     "\n",
@@ -77,224 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Box office</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Iron Man</td>\n",
-       "      <td>585171547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The Incredible Hulk</td>\n",
-       "      <td>265573859</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Iron Man 2</td>\n",
-       "      <td>621156389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Thor</td>\n",
-       "      <td>449326618</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Captain America: The First Avenger</td>\n",
-       "      <td>370569776</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>The Avengers</td>\n",
-       "      <td>1517935897</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Iron Man 3</td>\n",
-       "      <td>1215392272</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Thor: The Dark World</td>\n",
-       "      <td>644602516</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Captain America: The Winter Soldier</td>\n",
-       "      <td>714401889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Guardians of the Galaxy</td>\n",
-       "      <td>770867516</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Avengers: Age of Ultron</td>\n",
-       "      <td>1403013963</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Ant-Man</td>\n",
-       "      <td>518858449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Captain America: Civil War</td>\n",
-       "      <td>1140069413</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Doctor Strange</td>\n",
-       "      <td>676404566</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Guardians of the Galaxy Vol. 2</td>\n",
-       "      <td>862316233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Spider-Man: Homecoming</td>\n",
-       "      <td>880166350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Thor: Ragnarok</td>\n",
-       "      <td>846980024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Black Panther</td>\n",
-       "      <td>1348258224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Avengers: Infinity War</td>\n",
-       "      <td>2048134200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Ant-Man and The Wasp</td>\n",
-       "      <td>623144660</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Captain Marvel</td>\n",
-       "      <td>1126129839</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Avengers: Endgame</td>\n",
-       "      <td>2795465685</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Spider-Man: Far From Home</td>\n",
-       "      <td>1123901180</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Black Widow</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>The Eternals</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Shang-Chi and the Legend of the Ten Rings</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Doctor Strange in the Multiverse of Madness</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Thor: Love and Thunder</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             Title  Box office\n",
-       "Index                                                         \n",
-       "0                                         Iron Man   585171547\n",
-       "1                              The Incredible Hulk   265573859\n",
-       "2                                       Iron Man 2   621156389\n",
-       "3                                             Thor   449326618\n",
-       "4               Captain America: The First Avenger   370569776\n",
-       "5                                     The Avengers  1517935897\n",
-       "6                                       Iron Man 3  1215392272\n",
-       "7                             Thor: The Dark World   644602516\n",
-       "8              Captain America: The Winter Soldier   714401889\n",
-       "9                          Guardians of the Galaxy   770867516\n",
-       "10                         Avengers: Age of Ultron  1403013963\n",
-       "11                                         Ant-Man   518858449\n",
-       "12                      Captain America: Civil War  1140069413\n",
-       "13                                  Doctor Strange   676404566\n",
-       "14                  Guardians of the Galaxy Vol. 2   862316233\n",
-       "15                          Spider-Man: Homecoming   880166350\n",
-       "16                                  Thor: Ragnarok   846980024\n",
-       "17                                   Black Panther  1348258224\n",
-       "18                          Avengers: Infinity War  2048134200\n",
-       "19                            Ant-Man and The Wasp   623144660\n",
-       "20                                  Captain Marvel  1126129839\n",
-       "21                               Avengers: Endgame  2795465685\n",
-       "22                       Spider-Man: Far From Home  1123901180\n",
-       "23                                     Black Widow           0\n",
-       "24                                    The Eternals           0\n",
-       "25       Shang-Chi and the Legend of the Ten Rings           0\n",
-       "26     Doctor Strange in the Multiverse of Madness           0\n",
-       "27                          Thor: Love and Thunder           0"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "movies_list = pd.DataFrame({\"Title\": title,\n",
     "                            \"Box office\": box_office,\n",
@@ -334,7 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "movies_list.display.float_format = '{:,.2f}'.format"
    ]
   },
   {
